---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10923                                -
---------------------------------------------
- 2021-05-24                                -
---------------------------------------------
.: WSM: Task - Update total value when number of promotion is changed (WSM-338)
.: WSM: Task - ETA is not accurate (WSM-379)

---------------------------------------------
- 2021-05-23                                -
---------------------------------------------
.: WSM: Task - Showing the number of the products which is going to be prepared in In Progress phase (WSM-352)
.: WSM: Task - Update business flow & screenshot (WSM-373)

---------------------------------------------
- 2021-05-22                                -
---------------------------------------------
.: WSM: Task - Retrieve user details to place order + save inserted details (WSW-115)
.: WSM: Task - Decided whether want to show the selected delivery item (WSM-366)
.: WSM: Task - Update customer firstname and lastname to recipient name instead (WSM-371)
.: WSM: Task - Disable customer feature (WSM-372)
.: WSW: Task - Link the order button in website to local shopping (WSW-116)

---------------------------------------------
- 2021-05-20                                -
---------------------------------------------
.: WSM: Task - Back button to close image modal (WSM-365)
.: WSM: Task - Change create order quantity input to button (WSM-338)
.: WSM: Task - Fix QRcode in production (WSM-370)

---------------------------------------------
- 2021-05-19                                -
---------------------------------------------
.: WSM: BugFix - Encode category name  (WSM-363)
.: WSM: BugFix - Promotion in invoice is not able to remove (WSM-356)
.: WSM: BugFix - Promotion with empty value (WSM-351)