@@ -116,7 +116,7 @@ export class CreateStoreComponent implements OnInit {
       name: ['', [Validators.required, Validators.minLength(3), Validators.maxLength(40)]],
       tel: ['', [Validators.required, Validators.maxLength(30)]],
       email: ['', [Validators.minLength(3), Validators.maxLength(30), Validators.email]],
-      website: ['', [Validators.minLength(3), Validators.maxLength(128)]],
+      website: ['', [Validators.minLength(3), Validators.maxLength(128), Validators.pattern(/^(?:(?:https?|ftp):\/\/)?(?:(?!(?:10|127)(?:\.\d{1,3}){3})(?!(?:169\.254|192\.168)(?:\.\d{1,3}){2})(?!172\.(?:1[6-9]|2\d|3[0-1])(?:\.\d{1,3}){2})(?:[1-9]\d?|1\d\d|2[01]\d|22[0-3])(?:\.(?:1?\d{1,2}|2[0-4]\d|25[0-5])){2}(?:\.(?:[1-9]\d?|1\d\d|2[0-4]\d|25[0-4]))|(?:(?:[a-z\u00a1-\uffff0-9]-*)*[a-z\u00a1-\uffff0-9]+)(?:\.(?:[a-z\u00a1-\uffff0-9]-*)*[a-z\u00a1-\uffff0-9]+)*(?:\.(?:[a-z\u00a1-\uffff]{2,})))(?::\d{2,5})?(?:\/\S*)?$/)]],
       currency: ['MYR', [Validators.required]]
     });
   }
