@@ -4,6 +4,11 @@
 
 - v1.0.10923                                -
 ---------------------------------------------
+- 2021-05-25                                -
+---------------------------------------------
+.: WSM: BugFix - Url is not valid issue when creating store (WSM-380)
+
+---------------------------------------------
 - 2021-05-24                                -
 ---------------------------------------------
 .: WSM: Task - Update total value when number of promotion is changed (WSM-338)
